apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__missing_entities.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: stream.next_response().await.unwrap()
---
{
  "errors": [
    {
      "message": "error"
    }
  ],
  "data": {
    "currentUser": {
      "id": "0",
      "activeOrganization": {
        "id": "1",
        "name": null
      }
    }
  }
}
