apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__no_typename_on_interface-3.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: with_reversed_fragments
---
{
  "data": {
    "dog": {
      "name": "Spot",
      "id": "0000"
    }
  }
}
