apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__no_typename_on_interface.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: no_typename
---
{
  "data": {
    "dog": {
      "id": "4321",
      "name": "Spot"
    }
  }
}
