apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__nullability_bubbling.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: response
---
{
  "data": {
    "currentUser": {
      "activeOrganization": null
    }
  },
  "extensions": {
    "valueCompletion": [
      {
        "message": "Cannot return null for non-nullable type ID",
        "path": [
          "currentUser",
          "activeOrganization"
        ]
      }
    ]
  }
}
