apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__query_reconstruction.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: stream.next_response().await.unwrap()
---
{
  "errors": [
    {
      "message": "invalid input value at userId: found JSON null for GraphQL ID!",
      "extensions": {
        "name": "userId",
        "code": "VALIDATION_INVALID_TYPE_VARIABLE"
      }
    }
  ]
}
