apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__reconstruct_deferred_query_under_interface-2.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: stream.next_response().await.unwrap()
---
{
  "hasNext": false,
  "incremental": [
    {
      "data": {
        "name": "B"
      },
      "path": [
        "me",
        "memberships",
        0,
        "account"
      ]
    }
  ]
}
