apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__reconstruct_deferred_query_under_interface.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: stream.next_response().await.unwrap()
---
{
  "data": {
    "me": {
      "id": "0",
      "fullName": "A",
      "memberships": [
        {
          "permission": "USER"
        }
      ]
    }
  },
  "hasNext": true
}
