apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__root_selection_not_skipped.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: response
---
{
  "data": {
    "currentUser": {
      "id": "2",
      "name": "test"
    }
  }
}
