apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__root_selection_skipped_with_other_fields.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: response
---
{
  "data": {
    "otherUser": {
      "id": "2",
      "name": "test"
    }
  }
}
