apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__root_selection_with_several_fields_statically_skipped.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: response
---
{
  "data": {}
}
