apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__subscription_callback_schema_reload-2.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: stream.next_response().await.unwrap()
---
{
  "data": {
    "userWasCreated": {
      "name": "test",
      "activeOrganization": {
        "id": "0",
        "suborga": [
          {
            "id": "1",
            "name": "A"
          },
          {
            "id": "2",
            "name": "B"
          },
          {
            "id": "3",
            "name": "C"
          }
        ]
      }
    }
  }
}
